--- a/newtab.html
+++ b/newtab.html
@@ -14,7 +14,40 @@
     <!-- Popup for settings -->
     <div id="settingsPopup" class="popup">
         <label for="backgroundInput">Select Background (Image/GIF/Video):</label>
-        <input type="file" id="backgroundInput" accept="image/*,video/*"><br>
+        <input type="file" id="backgroundInput" accept="image/*,video/*"><br><br>
+
+        <label for="timeFormat">Time Format:</label>
+        <select id="timeFormat">
+            <option value="12">12-hour</option>
+            <option value="24">24-hour</option>
+        </select><br><br>
+
+        <label for="fontType">Font Type:</label>
+        <select id="fontType">
+            <option value="Arial">Arial</option>
+            <option value="Verdana">Verdana</option>
+            <option value="Times New Roman">Times New Roman</option>
+            <option value="Courier New">Courier New</option>
+        </select><br><br>
+
+        <label for="fontColor">Font Color:</label>
+        <input type="color" id="fontColor" value="#ffffff"><br><br>
+
+        <label for="fontSize">Font Size:</label>
+        <input type="number" id="fontSize" value="40"><br><br>
+
+        <label for="clockPosition">Clock Position:</label>
+        <select id="clockPosition">
+            <option value="top-left">Top Left</option>
+            <option value="top-right">Top Right</option>
+            <option value="bottom-left">Bottom Left</option>
+            <option value="bottom-right">Bottom Right</option>
+            <option value="center">Center</option>
+            <option value="free">Free Drag</option>
+        </select><br><br>
+
+        <label for="showSeconds">Show Seconds:</label>
+        <input type="checkbox" id="showSeconds" checked><br>
     </div>
 
     <script src="newtab.js"></script>
