--- a/newtab.html
+++ b/newtab.html
@@ -48,6 +48,8 @@
 
         <label for="showSeconds">Show Seconds:</label>
         <input type="checkbox" id="showSeconds" checked><br>
+		<button id="resetButton">Reset to Defaults</button>
+
     </div>
 
     <script src="newtab.js"></script>
