--- a/popup.html
+++ b/popup.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="settingsPopup">
+    <div id="settingsPopup" class="popup">
         <h2>Settings</h2>
         <!-- Add relevant input fields for settings here -->
-        <label for="backgroundInput">Background:</label>
-        <input type="file" id="backgroundInput" accept="image/*,video/*">
-        <br>
+        <label for="backgroundInput">Select Background (Image/GIF/Video):</label>
+        <input type="file" id="backgroundInput" accept="image/*,video/*"><br>
         <label for="clockFormat">Clock Format:</label>
         <select id="clockFormat">
             <option value="24h">24-Hour</option>
@@ -31,7 +30,7 @@
             <option value="free">Free Drag</option>
         </select>
         <br>
-        <button id="resetBtn">Reset to Default</button>
+    <button id="resetButton">Reset to Defaults</button>
     </div>
     <script src="popup.js"></script>
 </body>
