--- a/newtab.html
+++ b/newtab.html
@@ -9,13 +9,15 @@
 <body>
     <div id="background"></div>
     <div id="clock" class="clock"></div>
+	<div id="date" class="date"></div>
+
     <img id="settingsIcon" src="assets/settingsicon.png" alt="Settings" />
 
     <!-- Popup for settings -->
     <div id="settingsPopup" class="popup">
         <label for="backgroundInput">Select Background (Image/GIF/Video):</label>
         <input type="file" id="backgroundInput" accept="image/*,video/*"><br><br>
-
+        <h3>Clock Settings</h3>
         <label for="timeFormat">Time Format:</label>
         <select id="timeFormat">
             <option value="12">12-hour</option>
@@ -48,6 +50,42 @@
 
         <label for="showSeconds">Show Seconds:</label>
         <input type="checkbox" id="showSeconds" checked><br>
+		
+		 <h3>Date Settings</h3>
+		 
+		<label for="dateFormat">Date Format:</label>
+        <select id="dateFormat">
+		    <option value="DD/MM/YYYY">DD/MM/YYYY</option>
+            <option value="MM/DD/YYYY">MM/DD/YYYY</option>
+            <option value="YYYY-MM-DD">YYYY-MM-DD</option>
+        </select><br><br>
+
+        <label for="dateFontType">Date Font Type:</label>
+        <select id="dateFontType">
+            <option value="Arial">Arial</option>
+            <option value="Verdana">Verdana</option>
+            <option value="Times New Roman">Times New Roman</option>
+            <option value="Courier New">Courier New</option>
+        </select><br><br>
+
+        <label for="dateFontColor">Date Font Color:</label>
+        <input type="color" id="dateFontColor" value="#ffffff"><br><br>
+
+        <label for="dateFontSize">Date Font Size:</label>
+        <input type="number" id="dateFontSize" value="40"><br><br>
+
+        <label for="datePosition">Date Position:</label>
+        <select id="datePosition">
+            <option value="d-top-left">Top Left</option>
+            <option value="d-top-right">Top Right</option>
+            <option value="d-bottom-left">Bottom Left</option>
+            <option value="d-bottom-right">Bottom Right</option>
+            <option value="d-center">Center</option>
+            <option value="free">Free Drag</option>
+        </select><br><br>
+
+        <label for="showDate">Show Date:</label>
+        <input type="checkbox" id="showDate" checked><br><br>
 		<button id="resetButton">Reset to Defaults</button>
 
     </div>
