--- a/newtab.html
+++ b/newtab.html
@@ -10,7 +10,9 @@
 
 <body>
     <div id="loadingScreen"></div>
-    <div id="background"></div>
+    <div id="background">
+        <div id="backgroundContent"></div>
+    </div>
     <div id="clock" class="clock"></div>
     <div id="date" class="date"></div>
     <div id="day" class="day"></div>
